--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -1,19 +1,14 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Articles</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Articles List</h1>
-      {% for article in articles %}
-      <h2><a href="#">{{ article.title }}</a></h2>
-      <p>{{ article.snippet }}</p>
-      <p>{{ article.date }}</p>
-      {% endfor %}
-    </div>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+  Articles
+{% endblock %}
+{% block contenet %}
+  <div class="container">
+    <h1>Articles List</h1>
+    {% for article in articles %}
+    <h2><a href="#">{{ article.title }}</a></h2>
+    <p>{{ article.snippet }}</p>
+    <p>{{ article.date }}</p>
+    {% endfor %}
+  </div>
+{% endblock %}
