--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -2,7 +2,7 @@
 {% block title %}
   Articles
 {% endblock %}
-{% block contenet %}
+{% block content %}
   <div class="container">
     <h1>Articles List</h1>
     {% for article in articles %}
