--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,9 @@
 body
 {
   background-color:#0f121f;
-  background-image: url(/static/stars.jpg);
+  background-image: url(stars.jpg);
+  background-repeat-y: no-repeat;
+  background-attachment: fixed;
   color:#fff;
 }
 body *
