--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
-    {% block content %}
-    {% endblock %}
+    <div class="wrapper">
+      {% block content %}
+      {% endblock %}
+    </div>
   </body>
 </html>
