--- a/templates/Home.html
+++ b/templates/Home.html
@@ -9,5 +9,6 @@
     <p>Welcome To My Blog</p>
      push changes testing_1
      push changes testing_2
+     push changes testing_3
   </body>
 </html>
