--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
+    <h2><a href="{% url 'articles:list' %}">LEGO</a></h2>
     <div class="wrapper">
       {% block content %}
       {% endblock %}
